--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,11 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root>Loading...</app-root>
+  <app-root>
+    <div style="padding: 20%;text-align:center;">
+      <img src="./assets/bluetooth.png" width="100">
+      <h3>Loading...</h3>
+    </div>
+  </app-root>
 </body>
 </html>
