Angular 4 (angular-cli 1.0.0)

--- a/src/index.html
+++ b/src/index.html
@@ -2,18 +2,19 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>WebBluetoothScanner</title>
+  <title>Covalent Quickstart</title>
   <base href="/">
-
-  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/png" href="favicon.png" sizes="32x32">
+  <meta name="theme-color" content="#000000">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-  <app-root>
+  <qs-app>
     <div style="padding: 20%;text-align:center;">
-      <img src="./assets/bluetooth.png" width="100">
-      <h3>Loading...</h3>
+      <img src="assets/icons/covalent.svg" width="200">
+      <div>Quickstart Loading...</div>
     </div>
-  </app-root>
+  </qs-app>
 </body>
 </html>
